
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package AmmReader;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/perpetual/smart-contracts/L2/AmmReader";

message OwnershipTransferred {
	google.protobuf.Timestamp ts = 1;
	bytes PreviousOwner = 2;		//	address
	bytes NewOwner = 3;		//	address
}

message RewardTransferred {
	google.protobuf.Timestamp ts = 1;
	bytes Amount = 2;		//	uint256
}

message RewardWithdrawn {
	google.protobuf.Timestamp ts = 1;
	bytes Staker = 2;		//	address
	bytes Amount = 3;		//	uint256
}
